Full Form login + JWT authn/authz paths working. Pending: Create user in DB after Oauth2 login if necessary