@@ -1,11 +1,21 @@
 package pl.databucket.server.controller;
 
+import java.util.List;
+import javax.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 import pl.databucket.server.dto.TagDto;
 import pl.databucket.server.entity.Tag;
 import pl.databucket.server.exception.ExceptionFormatter;
@@ -14,22 +24,16 @@ import pl.databucket.server.exception.ItemNotFoundException;
 import pl.databucket.server.exception.ModifyByNullEntityIdException;
 import pl.databucket.server.service.TagService;
 
-import javax.validation.Valid;
-import java.util.List;
-import java.util.stream.Collectors;
-
 @CrossOrigin(origins = "*", allowedHeaders = "*")
 @RequestMapping("/api/tags")
 @RestController
+@RequiredArgsConstructor
 public class TagController {
 
     private final ExceptionFormatter exceptionFormatter = new ExceptionFormatter(TagController.class);
 
-    @Autowired
-    private TagService tagService;
-
-    @Autowired
-    private ModelMapper modelMapper;
+    private final TagService tagService;
+    private final ModelMapper modelMapper;
 
 
     @PreAuthorize("hasRole('ADMIN')")
@@ -38,7 +42,7 @@ public class TagController {
         try {
             Tag tag = tagService.createTag(tagDto);
             modelMapper.map(tag, tagDto);
-            return new ResponseEntity<>(tagDto, HttpStatus.CREATED);
+            return ResponseEntity.status(HttpStatus.CREATED).body(tagDto);
         } catch (ItemAlreadyExistsException e) {
             return exceptionFormatter.customException(e, HttpStatus.NOT_ACCEPTABLE);
         } catch (Exception e) {
@@ -50,8 +54,8 @@ public class TagController {
     public ResponseEntity<?> getTags() {
         try {
             List<Tag> tags = tagService.getTags();
-            List<TagDto> tagsDto = tags.stream().map(item -> modelMapper.map(item, TagDto.class)).collect(Collectors.toList());
-            return new ResponseEntity<>(tagsDto, HttpStatus.OK);
+            List<TagDto> tagsDto = tags.stream().map(item -> modelMapper.map(item, TagDto.class)).toList();
+            return ResponseEntity.ok(tagsDto);
         } catch (Exception ee) {
             return exceptionFormatter.defaultException(ee);
         }
@@ -63,7 +67,7 @@ public class TagController {
         try {
             Tag tag = tagService.modifyTag(tagDto);
             modelMapper.map(tag, tagDto);
-            return new ResponseEntity<>(tagDto, HttpStatus.OK);
+            return ResponseEntity.ok(tagDto);
         } catch (ItemAlreadyExistsException e) {
             return exceptionFormatter.customException(e, HttpStatus.NOT_ACCEPTABLE);
         } catch (ItemNotFoundException | ModifyByNullEntityIdException e) {
@@ -78,7 +82,7 @@ public class TagController {
     public ResponseEntity<?> deleteTags(@PathVariable long tagId) {
         try {
             tagService.deleteTag(tagId);
-            return new ResponseEntity<>(null, HttpStatus.NO_CONTENT);
+            return ResponseEntity.noContent().build();
         } catch (Exception e) {
             return exceptionFormatter.defaultException(e);
         }
